--- a/package.json
+++ b/package.json
@@ -102,6 +102,10 @@
     ]
   },
   "devDependencies": {
+    "@actions/core": "^1.7.0",
+    "@actions/github": "^5.0.1",
+    "@octokit/plugin-paginate-rest": "^2.17.0",
+    "@octokit/types": "^6.34.0",
     "@atlassian/aui": "^7.10.1",
     "@axe-core/puppeteer": "^4.4.2",
     "@babel/core": "^7.14.2",
