--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "@pollyjs/core": "^5.1.0",
     "@pollyjs/persister-fs": "^5.0.0",
     "@slack/web-api": "^5.10.0",
-    "@sourcegraph/eslint-config": "git+https://github.com/GitStartHQ/client-sourcegraph-eslint-config.git#contractors/SG-33303-2",
+    "@sourcegraph/eslint-config": "^0.27.0",
     "@sourcegraph/eslint-plugin-sourcegraph": "1.0.0",
     "@sourcegraph/eslint-plugin-wildcard": "1.0.0",
     "@sourcegraph/prettierrc": "^3.0.3",
