--- a/sg.config.yaml
+++ b/sg.config.yaml
@@ -7,6 +7,7 @@ env:
   PGSSLMODE: disable
   SG_DEV_MIGRATE_ON_APPLICATION_STARTUP: 'true'
   INSECURE_DEV: true
+  SRC_CODEINTEL_INFERENCE_OVERRIDE_SCRIPT: 'HELLO OLD FRIEND'
 
   SRC_REPOS_DIR: $HOME/.sourcegraph/repos
   SRC_LOG_LEVEL: info
